minor fix in card container spacing on mobile

--- a/src/scss/pages/firstam.scss
+++ b/src/scss/pages/firstam.scss
@@ -31,6 +31,10 @@
 card-container {
 	margin-block: $space-xl;
 
+	@include media("<=phone") {
+		margin-block: $space-m;
+	}
+
 	card-wc {
 		border-radius: $border-radius-l;
 	}
